--- a/index.html
+++ b/index.html
@@ -33,10 +33,24 @@
       <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 1" />
       <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 2" />
       <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 3" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 4" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 5" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 6" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 7" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 8" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 9" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 10" />
       <!-- Duplicate set of logos for seamless scroll -->
       <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 1" />
       <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 2" />
       <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 3" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 4" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 5" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 6" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 7" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 8" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 9" />
+      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 10" />
     </div>
   </div>
 </body>
