--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
   <div class="mt-12 max-w-6xl mx-auto overflow-hidden relative py-8">
     <div class="animate-scroll gap-6">
       <!-- First set of logos -->
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 1" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 2" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 3" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 4" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 5" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 6" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 7" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 8" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 9" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 10" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 1" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 2" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 3" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 4" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 5" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 6" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 7" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 8" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 9" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 10" />
       <!-- Duplicate set of logos for seamless scroll -->
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 1" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 2" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 3" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 4" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 5" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 6" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 7" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 8" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 9" />
-      <img src="https://via.placeholder.com/300x150" class="rounded-lg shadow-lg" alt="Brand 10" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 1" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 2" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 3" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 4" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 5" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 6" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 7" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 8" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 9" />
+      <img src="https://via.placeholder.com/300x300" class="w-[150px] h-[150px] object-contain rounded-lg shadow-lg" alt="Brand 10" />
     </div>
   </div>
 </body>
