--- a/index.html
+++ b/index.html
@@ -5,53 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Startup Studio</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    @keyframes scroll {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
-    }
-    .animate-scroll {
-      display: flex;
-      width: 200%;
-      animation: scroll 20s linear infinite;
-    }
-  </style>
 </head>
-<body class="bg-black text-white font-sans">
+<body class="bg-white text-black font-sans">
   <!-- Hero Section -->
-  <section class="h-screen w-full flex items-center justify-center text-center px-6">
-    <div>
-      <h1 class="text-4xl md:text-6xl font-bold mb-4">We Build Companies That Redefine the Future</h1>
-      <p class="text-lg md:text-xl text-gray-300">A startup studio crafting bold ventures from zero to one</p>
+  <section class="w-full px-6 py-20 md:py-32">
+    <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+      <div>
+        <h1 class="text-4xl md:text-6xl font-semibold leading-tight mb-6">Come build the next great company</h1>
+        <p class="text-lg md:text-xl text-gray-600 mb-6">We bring ideas, capital, and talent together, partnering with co-founders to build bold ventures from zero to one.</p>
+        <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-3 px-6 rounded-full transition">Build with us</button>
+      </div>
+      <div class="hidden md:block"></div>
     </div>
   </section>
 
-  <!-- Image Carousel -->
-  <div class="mt-12 max-w-6xl mx-auto overflow-hidden relative py-8">
-    <div class="animate-scroll gap-6">
-      <!-- First set of logos -->
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND1.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 1" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND2.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 2" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND3.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 3" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND4.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 4" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND5.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 5" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND6.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 6" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND7.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 7" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND8.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 8" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND9.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 9" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND10.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 10" />
-      <!-- Duplicate set of logos for seamless scroll -->
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND1.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 1" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND2.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 2" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND3.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 3" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND4.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 4" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND5.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 5" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND6.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 6" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND7.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 7" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND8.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 8" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND9.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 9" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND10.png" class="w-[200px] h-[200px] object-contain rounded-lg shadow-lg" alt="Brand 10" />
+  <!-- Brand Grid Section -->
+  <section class="px-6 pb-20">
+    <div class="max-w-7xl mx-auto grid grid-cols-2 md:grid-cols-5 gap-6">
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND1.png" alt="Brand 1" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND2.png" alt="Brand 2" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND3.png" alt="Brand 3" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND4.png" alt="Brand 4" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND5.png" alt="Brand 5" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND6.png" alt="Brand 6" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND7.png" alt="Brand 7" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND8.png" alt="Brand 8" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND9.png" alt="Brand 9" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND10.png" alt="Brand 10" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
     </div>
-  </div>
+  </section>
 </body>
 </html>
