--- a/index.html
+++ b/index.html
@@ -5,33 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Startup Studio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes scroll {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+    .animate-scroll {
+      display: flex;
+      animation: scroll 40s linear infinite;
+      width: max-content;
+    }
+  </style>
 </head>
 <body class="bg-white text-black font-sans">
+  <!-- Navigation/Header -->
+  <header class="w-full px-6 py-4 flex items-center justify-between max-w-7xl mx-auto">
+    <img src="https://via.placeholder.com/100x30?text=LOGO" alt="Logo" class="h-8" />
+  </header>
+
   <!-- Hero Section -->
-  <section class="w-full px-6 py-20 md:py-32">
+  <section class="w-full px-6 pb-12">
     <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center">
       <div>
         <h1 class="text-4xl md:text-6xl font-semibold leading-tight mb-6">Come build the next great company</h1>
-        <p class="text-lg md:text-xl text-gray-600 mb-6">We bring ideas, capital, and talent together, partnering with co-founders to build bold ventures from zero to one.</p>
-        <button class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-3 px-6 rounded-full transition">Build with us</button>
+        <p class="text-lg md:text-xl text-gray-600">We bring ideas, capital, and talent together, partnering with co-founders to build bold ventures from zero to one.</p>
       </div>
-      <div class="hidden md:block"></div>
     </div>
   </section>
 
-  <!-- Brand Grid Section -->
-  <section class="px-6 pb-20">
-    <div class="max-w-7xl mx-auto grid grid-cols-2 md:grid-cols-5 gap-6">
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND1.png" alt="Brand 1" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND2.png" alt="Brand 2" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND3.png" alt="Brand 3" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND4.png" alt="Brand 4" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND5.png" alt="Brand 5" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND6.png" alt="Brand 6" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND7.png" alt="Brand 7" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND8.png" alt="Brand 8" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND9.png" alt="Brand 9" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
-      <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND10.png" alt="Brand 10" class="rounded-2xl shadow-md object-cover w-full h-[200px]" />
+  <!-- Scrolling Brand Carousel -->
+  <section class="overflow-hidden py-6">
+    <div class="max-w-full mx-auto whitespace-nowrap">
+      <div class="animate-scroll gap-6 flex items-center">
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND1.png" alt="Brand 1" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND2.png" alt="Brand 2" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND3.png" alt="Brand 3" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND4.png" alt="Brand 4" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND5.png" alt="Brand 5" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND6.png" alt="Brand 6" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND7.png" alt="Brand 7" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND8.png" alt="Brand 8" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND9.png" alt="Brand 9" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND10.png" alt="Brand 10" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+      </div>
     </div>
   </section>
 </body>
