--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="bg-white text-black font-sans">
   <!-- Navigation/Header -->
   <header class="w-full px-6 py-4 flex items-center justify-between max-w-7xl mx-auto">
-    <img src="https://via.placeholder.com/100x30?text=LOGO" alt="Logo" class="h-8" />
+    <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/logo.png" alt="Logo" class="h-9 w-auto" />
   </header>
 
   <!-- Hero Section -->
@@ -37,16 +37,16 @@
   <section class="overflow-hidden py-6">
     <div class="max-w-full mx-auto whitespace-nowrap">
       <div class="animate-scroll gap-6 flex items-center">
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND1.png" alt="Brand 1" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND2.png" alt="Brand 2" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND3.png" alt="Brand 3" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND4.png" alt="Brand 4" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND5.png" alt="Brand 5" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND6.png" alt="Brand 6" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND7.png" alt="Brand 7" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND8.png" alt="Brand 8" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND9.png" alt="Brand 9" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
-        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND10.png" alt="Brand 10" class="h-[280px] w-auto rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND1.png" alt="Brand 1" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND2.png" alt="Brand 2" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND3.png" alt="Brand 3" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND4.png" alt="Brand 4" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND5.png" alt="Brand 5" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND6.png" alt="Brand 6" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND7.png" alt="Brand 7" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND8.png" alt="Brand 8" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND9.png" alt="Brand 9" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
+        <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND10.png" alt="Brand 10" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
       </div>
     </div>
   </section>
