--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 </head>
 <body class="bg-white text-black font-sans">
   <!-- Navigation/Header -->
-  <header class="w-full px-6 py-4 flex items-center justify-between max-w-7xl mx-auto">
-    <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/logo.png" alt="Logo" class="h-9 w-auto" />
+  <header class="w-full px-8 py-6 flex items-center justify-between max-w-7xl mx-auto">
+    <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/logo.png" alt="Logo" class="h-10 w-auto" />
   </header>
 
   <!-- Hero Section -->
-  <section class="w-full px-6 pb-12">
-    <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-      <div>
+  <section class="w-full px-8 pb-16">
+    <div class="max-w-7xl mx-auto flex flex-col md:flex-row md:justify-between md:items-center gap-12">
+      <div class="max-w-xl">
         <h1 class="text-4xl md:text-6xl font-semibold leading-tight mb-6">Come build the next great company</h1>
         <p class="text-lg md:text-xl text-gray-600">We bring ideas, capital, and talent together, partnering with co-founders to build bold ventures from zero to one.</p>
       </div>
@@ -34,9 +34,9 @@
   </section>
 
   <!-- Scrolling Brand Carousel -->
-  <section class="overflow-hidden py-6">
-    <div class="max-w-full mx-auto whitespace-nowrap">
-      <div class="animate-scroll gap-6 flex items-center">
+  <section class="overflow-hidden py-4">
+    <div class="max-w-full mx-auto">
+      <div class="animate-scroll gap-8 flex items-center px-8">
         <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND1.png" alt="Brand 1" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
         <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND2.png" alt="Brand 2" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
         <img src="https://raw.githubusercontent.com/introspektkevin/introspekt.com/main/BRAND3.png" alt="Brand 3" class="h-[450px] w-[450px] rounded-2xl shadow-md object-cover" />
