--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Startup Studio</title>
+  <title>Introspekt Startup Studio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @keyframes scroll {
@@ -27,8 +27,8 @@
   <section class="w-full px-8 pb-16">
     <div class="max-w-7xl mx-auto flex flex-col md:flex-row md:justify-between md:items-center gap-12">
       <div class="max-w-xl">
-        <h1 class="text-4xl md:text-6xl font-semibold leading-tight mb-6">Come build the next great company</h1>
-        <p class="text-lg md:text-xl text-gray-600">We bring ideas, capital, and talent together, partnering with co-founders to build bold ventures from zero to one.</p>
+        <h1 class="text-4xl md:text-6xl font-semibold leading-tight mb-6">Iconic Brands Built from Zero</h1>
+        <p class="text-lg md:text-xl text-gray-600">We're a startup studio crafting bold ventures from scratch. Design-led, speed-driven, and founder-focused.</p>
       </div>
     </div>
   </section>
