--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="w-full px-8 pb-16">
     <div class="max-w-7xl mx-auto flex flex-col md:flex-row md:justify-between md:items-center gap-12">
       <div class="max-w-xl">
-        <h1 class="text-4xl md:text-6xl font-semibold leading-tight mb-6">Iconic Brands Built from Zero</h1>
+        <h1 class="text-4xl md:text-6xl font-semibold leading-tight mb-6">ICONIC BRANDS BUILT FROM ZERO</h1>
         <p class="text-lg md:text-xl text-gray-600">We're a startup studio crafting bold ventures from scratch. Design-led, speed-driven, and founder-focused.</p>
       </div>
     </div>
