--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="max-w-7xl mx-auto flex flex-col md:flex-row md:justify-between md:items-center gap-12">
       <div class="max-w-xl">
         <h1 class="text-4xl md:text-6xl font-semibold leading-tight mb-6">ICONIC BRANDS BUILT FROM ZERO</h1>
-        <p class="text-lg md:text-xl text-gray-600">We're a brand factory crafting bold ventures from scratch. Design-led, speed-driven, and founder-focused.</p>
+        <p class="text-lg md:text-xl text-gray-600">We're a brand factory crafting bold ventures from scratch. Design-led, speed-driven, AI first.</p>
       </div>
     </div>
   </section>
